Added groq api integration for generateSteps method, which transforms mealdb recipe to a listed recipe with steps what to do in a simulation