@@ -7,26 +7,27 @@ import com.cookmate.main.exception.StepNotFoundException;
 import com.cookmate.main.mapper.StepMapper;
 import com.cookmate.main.model.Step;
 import com.cookmate.main.repository.StepRepository;
-import jakarta.servlet.http.HttpSession;
+import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import tools.jackson.databind.ObjectMapper;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class StepService {
 
     private static final Logger logger = LoggerFactory.getLogger(StepService.class);
 
     private final StepRepository stepRepository;
     private final StepMapper stepMapper;
-
-    public StepService(StepRepository stepRepository, StepMapper stepMapper) {
-        this.stepRepository = stepRepository;
-        this.stepMapper = stepMapper;
-    }
+    private final MealDbClient mealDbClient;
+    private final GroqClient groqClient;
+    private final ObjectMapper objectMapper;
 
     public StepDTO getStep(Long stepId) {
         Step step = stepRepository.findById(stepId)
@@ -37,34 +38,88 @@ public class StepService {
     /**
      * Generuje kroki do przepisu z TheMealDB.
      * Jeśli kroki już istnieją dla danego mealId, zwraca istniejące.
-     * W przeciwnym razie loguje i zwraca pusty response (placeholder dla LLM).
+     * W przeciwnym razie pobiera przepis z TheMealDB, wysyła do LLM i zapisuje kroki.
      *
      * @param request żądanie z mealId
-     * @param session sesja HTTP zawierająca metadane przepisu
      * @return response z listą kroków i metadanymi
      */
-    public StepGenerationResponse generateSteps(StepGenerationRequest request, HttpSession session) {
+    @Transactional
+    public StepGenerationResponse generateSteps(StepGenerationRequest request) {
         String mealId = request.mealId();
-
-        // 1. Sprawdz czy kroki juz istnieja
+        
+        // 1. Sprawdzić czy kroki już istnieją dla tego mealId
         List<Step> existingSteps = stepRepository.findByRecipeIdOrderByStepNumber(mealId);
         
         if (!existingSteps.isEmpty()) {
             logger.info("Zwracanie istniejących kroków dla mealId: {}", mealId);
             List<StepDTO> stepDTOs = existingSteps.stream()
                 .map(stepMapper::toDTO)
-                .collect(Collectors.toList());
+                .toList();
             
-            String recipeName = (String) session.getAttribute("recipeName");
-            return new StepGenerationResponse(mealId, recipeName, stepDTOs);
+            return new StepGenerationResponse(mealId, null, stepDTOs);
         }
         
-        // 2. Kroki nie istnieją - zalogować i placeholder dla LLM
-        logger.info("Brak istniejących kroków dla mealId: {}. TODO: Integracja z Hugging Face LLM", mealId);
-        logger.debug("Metadane przepisu z sesji: recipeName={}", session.getAttribute("recipeName"));
+        // 2. Kroki nie istnieją - pobrać przepis z TheMealDB
+        logger.info("Pobieranie przepisu z TheMealDB dla mealId: {}", mealId);
         
-        // 3. Na razie zwrócić pusty response z metadanymi
-        String recipeName = (String) session.getAttribute("recipeName");
-        return new StepGenerationResponse(mealId, recipeName, List.of());
+        try {
+            var mealResponse = mealDbClient.lookupById(mealId).block();
+            
+            if (mealResponse == null || mealResponse.meals() == null || mealResponse.meals().isEmpty()) {
+                logger.error("Przepis nie znaleziony w TheMealDB dla mealId: {}", mealId);
+                return new StepGenerationResponse(mealId, null, List.of());
+            }
+            
+            var meal = mealResponse.meals().get(0);
+            String recipeInstructions = meal.strInstructions();
+            String recipeName = meal.strMeal();
+            
+            logger.info("Wysyłanie przepisu '{}' do Groq LLM...", recipeName);
+            var llmResponse = groqClient.generateSteps(recipeInstructions).block();
+            
+            if (llmResponse == null || llmResponse.steps().isEmpty()) {
+                logger.warn("LLM zwrócił pustą listę kroków dla mealId: {}", mealId);
+                return new StepGenerationResponse(mealId, recipeName, List.of());
+            }
+            
+            // 3. Zapisać kroki do bazy
+            logger.info("Zapisywanie {} kroków do bazy dla mealId: {}", llmResponse.steps().size(), mealId);
+            List<Step> stepsToSave = llmResponse.steps().stream()
+                .map(llmStep -> Step.builder()
+                    .stepNumber(llmStep.stepNumber())
+                    .description(llmStep.description())
+                    .action(llmStep.action())
+                    .mainIngredient(llmStep.mainIngredient())
+                    .durationMinutes(llmStep.duration())
+                    .parameters(convertParametersToJsonString(llmStep.parameters()))
+                    .recipeId(mealId)
+                    .build())
+                .toList();
+            
+            List<Step> savedSteps = stepRepository.saveAll(stepsToSave);
+            
+            // 4. Zmapować na DTOs i zwrócić
+            List<StepDTO> stepDTOs = savedSteps.stream()
+                .map(stepMapper::toDTO)
+                .toList();
+            
+            return new StepGenerationResponse(mealId, recipeName, stepDTOs);
+            
+        } catch (Exception e) {
+            logger.error("Błąd podczas generowania kroków dla mealId: {}", mealId, e);
+            return new StepGenerationResponse(mealId, null, List.of());
+        }
+    }
+
+    private String convertParametersToJsonString(Object parameters) {
+        if (parameters == null) {
+            return "{}";
+        }
+        try {
+            return objectMapper.writeValueAsString(parameters);
+        } catch (Exception e) {
+            logger.error("Błąd podczas konwersji parametrów urządzenia na JSON", e);
+            return "{}";
+        }
     }
 }
